# payroll-rule-diff-local

./: .gitignore  README.md  SECURITY_REVIEW.md  pyproject.toml
src/payroll_rule_diff_local/: cli.py  dashboard.py  fixtures.py  models.py  replay.py  rules.py
tests/: test_workflow.py
