[project]
name = "payroll-rule-diff-local"
version = "0.1.0"
description = "Offline payroll rule diff and replay gate with signed local artifacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=46.0.3",
  "duckdb>=1.4.2",
  "jinja2>=3.1.6",
  "pydantic>=2.12.5",
  "rich>=14.2.0",
  "typer>=0.20.0",
]

[project.scripts]
payroll-rule-diff = "payroll_rule_diff_local.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
